[package]
name = "image-sec"
version = "0.1.0"
authors = ["espectro93 <gerdes.steffen@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
aes-gcm = "0.9.2"